// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapUIForm will render 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <form
          class="mm-box snap-ui-renderer__form mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          id="form"
        >
          <div
            class="mm-box mm-form-text-field snap-ui-renderer__input mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                focused="false"
                id="input"
                type="text"
                value="abc"
              />
            </div>
          </div>
          <button
            class="mm-box mm-text snap-ui-renderer__button mm-text--body-md mm-text--font-weight-medium mm-box--color-info-default"
            id="submit"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;

exports[`SnapUIForm will render with fields 1`] = `
<div>
  <div
    class="mm-box snap-ui-renderer__content mm-box--height-full mm-box--background-color-background-alternative"
    style="overflow-y: auto;"
  >
    <div
      class="box snap-ui-renderer__container box--display-flex box--flex-direction-column"
    >
      <div
        class="box snap-ui-renderer__panel box--display-flex box--flex-direction-column box--justify-content-flex-start box--color-text-default"
      >
        <form
          class="mm-box snap-ui-renderer__form mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
          id="form"
        >
          <div
            class="mm-box mm-form-text-field snap-ui-renderer__input snap-ui-renderer__field mm-box--display-flex mm-box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-form-text-field__label mm-text--body-md mm-text--font-weight-medium mm-box--margin-bottom-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="input"
            >
              My Input
            </label>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-form-text-field__text-field mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                focused="false"
                id="input"
                type="text"
                value="abc"
              />
            </div>
          </div>
          <div
            class="mm-box snap-ui-renderer__checkbox mm-box--display-flex mm-box--flex-direction-column"
          >
            <label
              class="mm-box mm-text mm-label mm-label--html-for mm-text--body-md mm-text--font-weight-medium mm-box--display-inline-flex mm-box--align-items-center mm-box--color-text-default"
              for="checkbox"
            >
              Checkbox
            </label>
            <label
              class="inline-flex items-center self-start"
              for="checkbox"
            >
              <div
                class="relative inline-flex size-6 items-center justify-center"
              >
                <input
                  aria-invalid="false"
                  class="peer size-6 shrink-0 cursor-pointer appearance-none rounded border-2 p-0 transition-transform enabled:active:scale-95 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-default disabled:cursor-not-allowed bg-icon-default enabled:hover:bg-icon-default-hover enabled:active:bg-icon-default-pressed border-icon-default"
                  data-testid="snap-ui-checkbox-checkbox"
                  id="checkbox"
                  type="checkbox"
                />
                <svg
                  class="inline-block w-4 h-4 text-icon-inverse pointer-events-none absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 transition peer-enabled:peer-active:scale-95 opacity-100"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9.55 17.886-5.7-5.7 1.425-1.425 4.275 4.275 9.175-9.176 1.425 1.425z"
                  />
                </svg>
              </div>
            </label>
          </div>
          <button
            class="mm-box mm-text snap-ui-renderer__button mm-text--body-md mm-text--font-weight-medium mm-box--color-info-default"
            id="submit"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
    <span
      data-renders="1"
      data-testid="performance"
    />
  </div>
</div>
`;
